frame/support/test/tests/construct_runtime_ui/undefined_call_part.stderr
error: `Pallet` does not have #[pallet::call] defined, perhaps you should remove `Call` from construct_runtime?
  --> tests/construct_runtime_ui/undefined_call_part.rs:5:1
   |
5  |   #[frame_support::pallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
...
48 | / construct_runtime! {
49 | |     pub struct Runtime
50 | |     {
51 | |         System: frame_system::{Pallet, Call, Storage, Config<T>, Event<T>},
52 | |         Pallet: pallet::{Pallet, Call},
53 | |     }
54 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `pallet::__substrate_call_check::is_call_part_defined` which comes from the expansion of the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
